Include default grouped layer control plugin

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="assets/MarkerCluster.Local.css" />
+    <link rel="stylesheet" href="assets/leaflet.groupedlayercontrol.css" />
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
     <script src="//cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
@@ -46,6 +47,7 @@
     
     <!--<script src="assets/markercluster.min.js"></script>-->
     <script src="assets/cluster.js"></script>
+    <script src="assets/leaflet.groupedlayercontrol.js"></script>
     <script src="data/style.js"></script>
     <script src="data/data.js"></script>
     <script src="data/timeline.js"></script>
